Make .header (Desktop version)

--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="stylesheet" href="../css/stylesheet.css" type="text/css">
+
+
 </head>
 <body>
 
     <header class="header">
 
-        
+        <div class="container-lg">
+
+            <div class="row">
+
+                <div class="col header__navigation d-flex align-items-center">
+                    <div class="header__navigation-logo d-flex align-items-center">
+                        <a href=""></a>
+                    </div>
+
+                    <nav>
+                        <ul class="list-unstyled d-flex">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="#">Documentations</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="col header__social d-flex justify-content-end align-items-center">
+
+                    <div class="header__social-icons">
+
+                        <ul class="list-unstyled d-flex">
+                            <li><a href="#"><img src="../assets/icons/facebook_icon.svg" alt="Social Icon"></a></li>
+                            <li><a href="#"><img src="../assets/icons/telegram_icon.svg" alt="Social Icon"></a></li>
+                            <li><a href="#"><img src="../assets/icons/twitter_icon.svg" alt="Social Icon"></a></li>
+                            <li><a href="#"><img src="../assets/icons/m_icon.svg" alt="Social Icon"></a></li>
+                        </ul>
+                        
+                    </div>
+
+                    <div class="header__social-cta">
+                        <a href="#">Get started</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
 
     </header>
 
