Small updates for .header (Desktop Version)

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
 
                     <nav>
                         <ul class="list-unstyled d-flex">
-                            <li><a href="#">Home</a></li>
+                            <li><a class="active" href="#">Home</a></li>
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Features</a></li>
                             <li><a href="#">Pricing</a></li>
