--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/stylesheet.css" type="text/css">
 
 
@@ -21,6 +21,9 @@
                     <div class="header__navigation-logo d-flex align-items-center">
                         <a href=""></a>
                     </div>
+
+                    <label for="media-menu-btn">menu</label>
+                        <input id="media-menu-btn" class="header__media-menu-btn" type="checkbox">
 
                     <nav>
                         <ul class="list-unstyled d-flex">
