--- a/html/index.html
+++ b/html/index.html
@@ -65,47 +65,46 @@
     <main>
 
         <section class="banner">
+            <div class="banner__wrapper">
+                <div class="container-md">
 
-            <div class="container-md">
+                    <div class="row">
 
-                <div class="banner__text">
-                    <p>PLAN YOUR LIFE</p>
+                        <div class="banner__content">
+                            <div class="banner__title-wrapper d-flex direction-column text-center">
+                            <div class="banner__subtitle">
+
+                                PLAN YOUR LIFE
+
+                            </div>
+
+                            <h1 class="banner__title">Increase your <b>productivity</b></h1>
+
+                            <p class="banner__description">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.
+                                Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</p>
+                            </div>
+                            <div class="banner__play">
+
+                                <a class="d-flex align-items-center justify-content-center" href="#"><i class="bi bi-caret-right-fill"></i></a>
+
+                            </div>
+
+                            <div class="banner__controls d-flex align-items-center justify-content-center">
+
+                                <div class="banner__controls-item banner__controls-item-active"></div>
+                                <div class="banner__controls-item"></div>
+                                <div class="banner__controls-item"></div>
+
+                            </div>
+
+                        </div>
+                    </div>
+
                 </div>
-
-                <div class="banner__title">
-                    <h1>Increase your <span>productivity</span></h1>
-                </div>
-
-                <div class="banner__description">
-                    <p>Brute laoreet efficiendi id his, ea illum nonumes
-                        luptatum pro. Usu atqui laudem an, insolens gubergren
-                        similique est cu. Et vel modus congue vituperata.</p>
-                </div>
-                
-                <div class="banner__play">
-                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="152" height="152" viewBox="0 0 152 152" fill="none">
-                        <g filter="url(#filter0_d_6_313)">
-                            <circle cx="76" cy="66" r="26" fill="white"/>
-                        </g>
-                        <path d="M81.2308 65.1767C82.2564 65.7649 82.2564 67.2351 81.2308 67.8233L74.3077 71.793C73.2821 72.3811 72 71.646 72 70.4698V62.5302C72 61.354 73.2821 60.6189 74.3077 61.207L81.2308 65.1767Z" fill="#5E81FF"/>
-                        <defs>
-                            <filter id="filter0_d_6_313" x="0" y="0" width="152" height="152" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-                                <feOffset dy="10"/>
-                                <feGaussianBlur stdDeviation="25"/>
-                                <feColorMatrix type="matrix" values="0 0 0 0 0.787409 0 0 0 0 0.817846 0 0 0 0 0.906114 0 0 0 0.6 0"/>
-                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_6_313"/>
-                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_6_313" result="shape"/>
-                            </filter>
-                        </defs>
-                    </svg></a>
-                </div>
-
             </div>
-
         </section>
 
+        <!--
         <section class="companies">
 
             <div class="container-md">
@@ -143,7 +142,7 @@
             </div>
 
         </section>
-
+        -->
 
 
     </main>
