--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,9 @@
 
     <header class="header">
 
-        <div class="container-lg">
+        <div class="header__wrapper">
+
+            <div class="container-lg">
 
             <div class="row">
 
@@ -57,6 +59,8 @@
                 </div>
 
             </div>
+
+        </div>
 
         </div>
 
@@ -104,7 +108,7 @@
             </div>
         </section>
 
-        <!--
+
         <section class="companies">
 
             <div class="container-md">
@@ -142,8 +146,6 @@
             </div>
 
         </section>
-        -->
-
 
     </main>
 
