Make markup for .app section

--- a/html/index.html
+++ b/html/index.html
@@ -197,6 +197,112 @@
 
         </section>
 
+        <section class="app">
+
+            <div class="container-md">
+
+                <div class="app__subtitles">
+                    <p>ABOUT US</p>
+                </div>
+
+                <div class="app__title">
+                    <h2>Read about our app</h2>
+                </div>
+
+                <div class="app__main-content">
+
+                    <div class="app__box">
+                        
+                        <figure>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="69" height="69" viewBox="0 0 69 69" fill="none">
+                                <circle cx="34.5" cy="34.5" r="34.5" fill="#F1F5FF"/>
+                                <path d="M27 31.8727V43H31.4211L34 41L36.5789 43H41V31.8727L34 26L27 31.8727Z" stroke="#4074F8" stroke-width="2.5"/>
+                            </svg>
+                        </figure>
+
+                        <h3 class="app__box-title">Overview</h3>
+
+                        <p class="app__box-description">
+                            Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.
+                        </p>
+                        
+                    </div>
+
+                    <div class="app__box">
+
+                        <figure>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="69" height="69" viewBox="0 0 69 69" fill="none">
+                                <circle cx="34.5" cy="34.5" r="34.5" fill="#F1F5FF"/>
+                                <path d="M40.7544 42H33.0877H30.1994H23V31.9496V28H33.0877L34.7018 31.1613H40.7544V32.9677M40.7544 42L46 32.9677H40.7544M40.7544 42V32.9677" stroke="#4074F8" stroke-width="2.5"/>
+                            </svg>
+                        </figure>
+
+                        <h3 class="app__box-title">Files</h3>
+
+                        <p class="app__box-description">
+                            No vim nulla vitae intellegat. Ei enim error ius, solet atomorum conceptam ex has.
+                        </p>
+
+                    </div>
+
+                    <div class="app__box">
+
+                        <figure>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="69" height="69" viewBox="0 0 69 69" fill="none">
+                                <circle cx="34.5" cy="34.5" r="34.5" fill="#F1F5FF"/>
+                                <path d="M26 27V31.9496V38.5H28.2811L29.5 42L33 38.5H37.7018H43.7544V32.9677V27H41H36.5H26Z" stroke="#4074F8" stroke-width="2.5"/>
+                            </svg>
+                        </figure>
+
+                        <h3 class="app__box-title">Meeting chats</h3>
+
+                        <p class="app__box-description">
+                            Vim ne tacimates neglegentur. Erat diceret omittam at est.
+                        </p>
+
+                    </div>
+
+                    <div class="app__box">
+
+                        <figure>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="69" height="69" viewBox="0 0 69 69" fill="none">
+                                <circle cx="34.5" cy="34.5" r="34.5" fill="#F1F5FF"/>
+                                <path d="M26 36.9677V42.5H28.2811H33H37.7018H43.2544V36.9677M30.7544 30L34.7544 27M38.7544 30L34.7544 27M34.7544 27V37.5" stroke="#4074F8" stroke-width="2.5"/>
+                            </svg>
+                        </figure>
+
+                        <h3 class="app__box-title">Save events</h3>
+
+                        <p class="app__box-description">
+                            Nisl idque mel ea, nominati voluptatum.
+                        </p>
+
+                    </div>
+
+                </div>
+
+                <div class="app__control-panel">
+
+                    <div class="app__read-more">
+
+                        <a href="#">Read more</a>
+
+                    </div>
+
+                    <div class="app__option-control">
+                        OR
+                    </div>
+
+                    <div class="app__get-started">
+                        <a href="#">Get started</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
 </body>
