--- a/html/index.html
+++ b/html/index.html
@@ -303,6 +303,35 @@
 
         </section>
 
+        <section class="started">
+
+            <div class="container-md">
+
+                <div class="started__wrapper-content">
+
+
+                    <p class="started__subtitles">PLAN YOUR LIFE</p>
+
+                    <h2 class="started__title">Get <span>started</span> now</h2>
+
+                    <p class="started__description">Brute laoreet efficiendi id his, ea illum
+                        nonumes luptatum pro. Usu atqui laudem an,
+                        insolens gubergren similique est cu. Et vel
+                        modus congue vituperata.
+                    </p>
+
+                <div class="started__controls d-flex justify-content-center">
+
+                    <a class="started__btn-left active-btn-started" href="#">View pricing</a>
+
+                    <a class="started__btn-right" href="#">Read documentation</a>
+
+                </div>
+
+            </div>
+            </div>
+        </section>
+
     </main>
 
 </body>
