Make section .app (Desktop version)

--- a/html/index.html
+++ b/html/index.html
@@ -199,19 +199,19 @@
 
         <section class="app">
 
-            <div class="container-md">
+            <div class="app__wrapper container-md">
 
-                <div class="app__subtitles">
-                    <p>ABOUT US</p>
-                </div>
 
-                <div class="app__title">
-                    <h2>Read about our app</h2>
-                </div>
+                <p class="app__subtitles">ABOUT US</p>
 
-                <div class="app__main-content">
 
-                    <div class="app__box">
+
+                <h2 class="app__title">Read about our app</h2>
+
+
+                <div class="app__main-content d-flex">
+
+                    <div class="app__box d-flex">
                         
                         <figure>
                             <svg xmlns="http://www.w3.org/2000/svg" width="69" height="69" viewBox="0 0 69 69" fill="none">
@@ -228,7 +228,7 @@
                         
                     </div>
 
-                    <div class="app__box">
+                    <div class="app__box d-flex">
 
                         <figure>
                             <svg xmlns="http://www.w3.org/2000/svg" width="69" height="69" viewBox="0 0 69 69" fill="none">
@@ -245,7 +245,7 @@
 
                     </div>
 
-                    <div class="app__box">
+                    <div class="app__box d-flex">
 
                         <figure>
                             <svg xmlns="http://www.w3.org/2000/svg" width="69" height="69" viewBox="0 0 69 69" fill="none">
@@ -262,7 +262,7 @@
 
                     </div>
 
-                    <div class="app__box">
+                    <div class="app__box d-flex">
 
                         <figure>
                             <svg xmlns="http://www.w3.org/2000/svg" width="69" height="69" viewBox="0 0 69 69" fill="none">
@@ -281,21 +281,13 @@
 
                 </div>
 
-                <div class="app__control-panel">
+                <div class="app__control-panel d-flex">
 
-                    <div class="app__read-more">
+                        <a class="app__read-more" href="#">Read more</a>
 
-                        <a href="#">Read more</a>
+                        <p class="app__option-control">OR</p>
 
-                    </div>
-
-                    <div class="app__option-control">
-                        OR
-                    </div>
-
-                    <div class="app__get-started">
-                        <a href="#">Get started</a>
-                    </div>
+                        <a class="app__get-started" href="#">Get started</a>
 
                 </div>
 
