--- a/html/index.html
+++ b/html/index.html
@@ -283,11 +283,11 @@
 
                 <div class="app__control-panel d-flex">
 
-                        <a class="app__read-more" href="#">Read more</a>
+                        <a class="app__read-more d-flex" href="#">Read more</a>
 
                         <p class="app__option-control">OR</p>
 
-                        <a class="app__get-started" href="#">Get started</a>
+                        <a class="app__get-started d-flex" href="#">Get started</a>
 
                 </div>
 
