Make .blog section (Desktop)

--- a/html/index.html
+++ b/html/index.html
@@ -343,6 +343,70 @@
             </div>
         </section>
 
+        <section class="blog">
+
+            <div class="container-md">
+
+                <p class="blog__subtitles">OUR RESOURCES</p>
+
+                <h3 class="blog__title">Start reading our blog</h3>
+
+                <div class="blog__main-content d-flex justify-content-center">
+
+                    <div class="blog__left-part-content d-flex justify-content-center">
+
+                        <div class="blog__side-left">
+                            <figure class="blog__back-pic">
+                                <img src="../assets/images/Rectangle_3.png" alt="Image">
+                            </figure>
+                        </div>
+
+                        <div class="blog__side-right d-flex justify-content-center">
+
+                            <figure>
+                                <img src="../assets/images/Rectangle%203.1.png" alt="Image">
+                            </figure>
+
+                            <figure>
+                                <img src="../assets/images/Rectangle%203.2.png" alt="Image">
+                            </figure>
+
+                        </div>
+
+                    </div>
+
+                    <div class="blog__right-part-content">
+
+                        <h2 class="blog__right-title-content">How to start planning</h2>
+
+                        <p class="blog__right-description-content">
+                            Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti. Natum petentium principes mei ea. Tota everti periculis vis ei, quas tibique pro at, eos ut decore ...
+                        </p>
+
+                        <div class="blog__right-control-content d-flex">
+
+                            <a class="blog__btn active" href="#">Read now</a>
+
+                            <a class="blog__btn" href="#">Add to your bookmarks</a>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="blog__controls d-flex align-items-center justify-content-center">
+
+                    <div class="blog__controls-item blog__controls-item-active"></div>
+                    <div class="blog__controls-item"></div>
+                    <div class="blog__controls-item"></div>
+
+                </div>
+
+            </div>
+
+        </section>
+
         <section class="started">
 
             <div class="container-md">
