Make .costumers section (Desktop)

--- a/html/index.html
+++ b/html/index.html
@@ -407,6 +407,54 @@
 
         </section>
 
+        <section class="costumers">
+
+            <div class="container-md">
+
+                <div class="costumers__wrapper d-flex">
+
+                    <div class="costumers__left-side">
+
+                        <p class="costumers__subtitle">TESTIMONIALS</p>
+
+                        <h2 class="costumers__title">Customers's quotes</h2>
+
+                        <p class="costumers__description">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an.</p>
+
+                    </div>
+
+                    <div class="costumers__right-side">
+                        <div class="costumers__wrapper-right-side">
+                        <p class="costumers__right-description">
+                            Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                        </p>
+
+                        <figure class="costumers__avatar">
+                            <img src="../assets/images/costumers_avatar.png" alt="Avatar">
+                        </figure>
+                        </div>
+                        <div class="costumers__controls d-flex align-items-center justify-content-center">
+
+                            <div class="costumers__controls-item"></div>
+                            <div class="costumers__controls-item"></div>
+                            <div class="costumers__controls-item"></div>
+                            <div class="costumers__controls-item blog__controls-item-active"></div>
+                            <div class="costumers__controls-item"></div>
+                            <div class="costumers__controls-item"></div>
+                            <div class="costumers__controls-item"></div>
+                            <div class="costumers__controls-item"></div>
+                            <div class="costumers__controls-item"></div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
         <section class="started">
 
             <div class="container-md">
