Make .questions section (Desktop)

--- a/html/index.html
+++ b/html/index.html
@@ -455,6 +455,77 @@
 
         </section>
 
+        <section class="questions">
+
+            <div class="container-md">
+
+                <p class="questions__subtitles">Customer help</p>
+
+                <h3 class="questions__title">Frequently asked questions</h3>
+
+                <div class="questions__hide-question-block d-flex">
+                    
+                    <figure>
+                        <img class="questions__icon" src="../assets/icons/questions_vector.svg" alt="Question">
+                    </figure>
+
+                    <p class="questions__question-description">Reque insolens in vel?</p>
+                    
+                </div>
+
+                <div class="questions__hide-question-block d-flex">
+
+                    <figure>
+                        <img class="questions__icon" src="../assets/icons/questions_vector.svg" alt="Question">
+                    </figure>
+
+                    <p class="questions__question-description">Vis rebum error graecis ea, id sit postea accusamus?</p>
+
+                </div>
+
+                <div class="questions__open-question-block d-flex">
+
+                    <figure>
+                        <img src="../assets/icons/questions_icon-up.svg" alt="Up">
+                    </figure>
+
+                    <h3 class="questions__title-open-question">Lorem repudiandae ne nec?</h3>
+                </div>
+                    <div class="questions__wrapper-open-block d-flex">
+
+                        <p class="questions__open-description">
+                            Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                        </p>
+                        <div>
+                            <a class="questions__btn-documentation" href="#">Go to documentation</a>
+                        </div>
+                    </div>
+
+
+                <div class="questions__hide-question-block d-flex">
+
+                    <figure>
+                        <img class="questions__icon" src="../assets/icons/questions_vector.svg" alt="Question">
+                    </figure>
+
+                    <p class="questions__question-description">Ad dicit numquam vel. Et eos iudico feugait percipitur?</p>
+
+                </div>
+
+                <div class="questions__hide-question-block d-flex">
+
+                    <figure>
+                        <img class="questions__icon" src="../assets/icons/questions_vector.svg" alt="Question">
+                    </figure>
+
+                    <p class="questions__question-description">Sea no dico percipitur. Fierent constituam definitiones id eum?</p>
+
+                </div>
+
+            </div>
+
+        </section>
+
         <section class="started">
 
             <div class="container-md">
