Make .newsletter section (Desktop)

--- a/html/index.html
+++ b/html/index.html
@@ -555,6 +555,36 @@
             </div>
         </section>
 
+        <section class="newsletter">
+
+            <div class="container-md">
+
+                <div class="newsletter__wrapper d-flex">
+
+                    <div class="newsletter__left-side">
+
+                        <h3 class="newsletter__subtitles">Sign up for newsletter</h3>
+
+                        <p class="newsletter__description">Cu qui soleat partiendo urbanitas. Eum aperiri indoctum eu, homero alterum.</p>
+
+                    </div>
+
+                    <div class="newsletter__right-side d-flex">
+
+                        <label for="email">
+                        <input class="newsletter__email" id="email" type="email" placeholder="Email address">
+                        </label>
+
+                        <button type="submit" class="newsletter__save-me">Save me</button>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
 </body>
