Make .footer section (Desktop)

--- a/html/index.html
+++ b/html/index.html
@@ -587,5 +587,61 @@
 
     </main>
 
+    <footer class="footer">
+
+        <div class="footer__wrapper">
+
+            <div class="container-lg">
+
+                <div class="row">
+
+                    <div class="col footer__navigation d-flex align-items-center">
+                        <div class="footer__navigation-logo d-flex align-items-center">
+                            <a href=""></a>
+                        </div>
+
+
+                        <nav>
+                            <ul class="list-unstyled d-flex">
+                                <li><a class="active" href="#">Home</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Features</a></li>
+                                <li><a href="#">Pricing</a></li>
+                                <li><a href="#">Documentations</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+
+                    <div class="col footer__social d-flex justify-content-end align-items-center">
+
+                        <div class="footer__social-icons">
+
+                            <ul class="list-unstyled d-flex">
+                                <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                                <li><a href="#"><i class="bi bi-telegram"></i></a></li>
+                                <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+                                <li><a href="#"><i class="bi bi-apple"></i></a></li>
+                            </ul>
+
+                        </div>
+
+                        <div class="footer__social-cta">
+                            <a href="#">Get started</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="footer__copyright">
+                    <p class="footer__copyright_">Copyright © 2018 by Random site</p>
+                </div>
+
+            </div>
+
+        </div>
+
+    </footer>
+
 </body>
 </html>
