Change icons in header and footer section for bootstrap icons

--- a/html/index.html
+++ b/html/index.html
@@ -44,10 +44,10 @@
                     <div class="header__social-icons">
 
                         <ul class="list-unstyled d-flex">
-                            <li><a href="#"><img src="../assets/icons/facebook_icon.svg" alt="Social Icon"></a></li>
-                            <li><a href="#"><img src="../assets/icons/telegram_icon.svg" alt="Social Icon"></a></li>
-                            <li><a href="#"><img src="../assets/icons/twitter_icon.svg" alt="Social Icon"></a></li>
-                            <li><a href="#"><img src="../assets/icons/m_icon.svg" alt="Social Icon"></a></li>
+                            <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                            <li><a href="#"><i class="bi bi-telegram"></i></a></li>
+                            <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+                            <li><a href="#"><i class="bi bi-apple"></i></a></li>
                         </ul>
                         
                     </div>
